--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": "https://github.com/wchavarria03/my-management-api",
   "author": "Walter Chavarria <wchavarria03@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.13.3",
     "cors": "^2.8.4",
@@ -18,7 +18,10 @@
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.7",
     "lodash": "^4.17.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.22.12",
+    "sequelize-cli": "^3.1.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
